--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h6 {
   font-size: inherit;
 }
 
-h1 {
+h1, h4 {
   font-size: 30px;
   text-align: center;
   line-height: 50px;
@@ -43,7 +43,9 @@ body {
   font-size: 16px;
   background: url("assets/118.jpg") center;
   color: #fff;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  /* font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; */
+  background-attachment: fixed;
+  font-family: 'Roboto', sans-serif;
 }
 body._lock {
   overflow: hidden;
@@ -75,6 +77,7 @@ body._lock {
 }
 .page_text p {
   margin: 0px 0px 20px 0px;
+  font-size: 18px;
 }
 .page_sub-title {
   font-size: 30px;
@@ -88,11 +91,12 @@ body._lock {
   left: 0;
   width: 100%;
   z-index: 10;
-  background-color: seagreen;
+  background: #333333;  /* fallback for old browsers */
+  background: linear-gradient(to left, #B22222, #333333);
 }
 .header_container {
-  max-width: 1200px;
-  margin: 0px auto;
+  /* max-width: 1200px; */
+  /* margin: 0px auto; */
   display: flex;
   padding: 0 30px;
   align-items: center;
@@ -282,7 +286,7 @@ body._touch .menu_list > li.active .menu_arrow {
     top: 0;
     left: 0;
     height: 70px;
-    background-color: seagreen;
+    background: linear-gradient(to left, #B22222, #333333);
     z-index: 2;
   }
   .menu_list > li {
@@ -367,13 +371,17 @@ body._touch .menu_list > li.active .menu_arrow {
   padding: 20px 0;
   text-align: center;
   color: black;
-  height: 200px;
+  height: 250px;
 }
 
 .gallery_item .text h3 {
   color: seagreen;
   font-size: 24px;
   font-weight: bold;
+  background: linear-gradient(to left, #B22222, #333333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding-bottom: 15px;
 }
 
 .gallery_item .text .title p {
@@ -412,3 +420,10 @@ body._touch .menu_list > li.active .menu_arrow {
   width: 100%;
   height: 450px;
 }
+
+/* ...................................................... */
+
+
+
+
+
